--- a/back-end/costalizmerch/package.json
+++ b/back-end/costalizmerch/package.json
@@ -11,10 +11,11 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "@strapi/strapi": "4.10.3",
-    "@strapi/plugin-users-permissions": "4.10.3",
-    "@strapi/plugin-i18n": "4.10.3",
-    "mysql": "2.18.1"
+    "@strapi/plugin-i18n": "4.10.5",
+    "@strapi/plugin-users-permissions": "4.10.5",
+    "@strapi/strapi": "4.10.5",
+    "mysql": "2.18.1",
+    "stripe": "^12.5.0"
   },
   "author": {
     "name": "A Strapi developer"
