--- a/front-end/package.json
+++ b/front-end/package.json
@@ -20,6 +20,7 @@
     "aos": "^3.0.0-beta.6",
     "axios": "^1.4.0",
     "install": "^0.13.0",
+    "luxon": "^3.3.0",
     "npm": "^9.6.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
